--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="welcome">
+        <h1>Collections of Hindi film 2024</h1>
+    </div>
+<div class="bg container">
+
     <div class="film">
     <table border="2px">
         <caption>LIST OF HINDI FILM OF 2024</caption>
@@ -18,6 +23,7 @@
                 <th>Director</th>
                 <th>Cast</th>
                 <th>Studio (Production House)</th>
+                <th>Teaser</th>
             </tr>
         </thead>
         <tbody>
@@ -31,6 +37,7 @@
                 <td>Akashaditya Lama</td>
                 <td>Jatin KhuranaAmeesha PatelAngela Krislinzki</td>
                 <td>Shreeram Productions, Victorious Enterprises</td>
+                <td><iframe src="https://www.youtube.com/embed/7dt9Wf1nmyw?si=nPA_VzZvbJxuMBz8" allow="autoplay" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td class="datej">12</td>
@@ -41,6 +48,7 @@
                 <td>Sriram Raghavan</td>
                 <td>Katrina Kaif,Vijay Sethupathi</td>
                 <td>Tips Industries, Matchbox Pictures</td>
+                <td><iframe src="https://www.youtube.com/embed/EK4o81P5Lrc?si=ziagaIr9OxsXK8XT" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td class="datej">19</td>
@@ -51,6 +59,7 @@
                 <td>Ravi Jadhav</td>
                 <td>Pankaj Tripathi</td>
                 <td>Bhanushali Studios, Legend Studios</td>
+                <td><iframe src="https://www.youtube.com/embed/zasckclx0Gc?si=-Kl16MUnIzCaaCmC" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td class="datej">25</td>
@@ -61,6 +70,7 @@
                 <td>Siddharth Anand</td>
                 <td>Anand Hrithik RoshanDeepika PadukoneAnil KapoorKaran Singh GroverAkshay OberoiSanjeeda Sheikh</td>
                 <td>Viacom18 Studios, Marflix Pictures</td>
+                <td><iframe src="https://www.youtube.com/embed/973Ct2AC3EA?si=Bs-kkw5aqZ_7M-Tf"></iframe></td>
             </tr>
 
             <tr>
@@ -73,6 +83,7 @@
                 <td>Amit JoshiAradhana Sah</td>
                 <td>Shahid KapoorKriti SanonDharmendraDimple Kapadia</td>
                 <td>Maddock Films, Jio Studios</td>
+                <td><iframe src="https://www.youtube.com/embed/w_N6d4ec79c?si=0tY7DswX8CTFh78H" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td>
@@ -82,6 +93,7 @@
                 <td>Pulkit</td>
                 <td>Bhumi PednekarSanjay MishraSai TamhankarAditya Srivastava</td>
                 <td>Red Chillies Entertainment, Netflix</td>
+                <td><iframe src="https://www.youtube.com/embed/hWE6B3g6d5c?si=EB-YacIcAJC_VJ2m" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td>
@@ -91,6 +103,7 @@
                 <td>Gurvinder SinghKaushik GangulyBhaskar Hazarika</td>
                 <td>Jitendra KumarJisshu SenguptaJohnny LeverNimisha SajayanSanjay MahanandBoloram Das</td>
                 <td>Neeljai Films, Tyche Films Media Solutions, ZEE5</td>
+                <td><iframe src="https://www.youtube.com/embed/BAOHFdNXWr8?si=_feeBIXbpN4RwVSZ" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td rowspan="2" class="datef">16</td>
@@ -101,6 +114,8 @@
                 <td>Shantanu Anant Tambe</td>
                 <td>Vardhan PuriGaurav SareenSanjay PandeyRajesh Jais</td>
                 <td>3S Movies</td>
+                <td><iframe src="https://www.youtube.com/embed/ygEKY1CjwFg?si=_D0Q9mav5MvYXY0X" frameborder="0"></iframe>
+                </td>
             </tr>
             <tr>
                 <td>
@@ -110,6 +125,7 @@
                 <td>G. Ashok</td>
                 <td>Guru RandhawaSaiee ManjrekarAnupam KherIla Arun</td>
                 <td>Mach Films</td>
+                <td><iframe src="https://www.youtube.com/embed/cFPB7FsdplI?si=XuhzW667afBwbefs" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td rowspan="3" class="datef">23</td>
@@ -120,6 +136,7 @@
                 <td>Aditya Datt</td>
                 <td>Vidyut JammwalNora FatehiArjun RampalAmy Jackson</td>
                 <td>Action Hero Films</td>
+                <td><iframe src="https://www.youtube.com/embed/8xjSvwi7W-0?si=1jaAK6Jat4GBISMc" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td>
@@ -129,6 +146,7 @@
                 <td> Aditya Suhas Jambhale </td>
                 <td> Yami GautamPriyamaniSkand ThakurAshwini KaulVaibhav TatwawadiArun GovilKiran Karmarkar </td>
                 <td> Jio Studios, B62 Studios </td>
+                <td><iframe src="https://www.youtube.com/embed/kWzm1qBjOQQ?si=C6d8vJjiFI3yGwhI" frameborder="0"></iframe></td>
             </tr>
             <tr>
                 <td>
@@ -138,10 +156,12 @@
                 <td>Varun Grover</td>
                 <td>Bodhisattva SharmaSamta SudikshaSheeba ChaddhaGeeta AgrawalNeeraj Ayush PandeySaadat Khan</td>
                 <td>Matchbox Shots, Karmic Films, Clocktower Pictures & Co.</td>
+                <td><iframe src="https://www.youtube.com/embed/ahttNxGnLsQ?si=lxYjxPNxZyDI6XkS" frameborder="0"></iframe></td>
             </tr>
         </tbody>
     </table>
 </div>
+</div>    
 </body>
 </html>
 
